# fek-extractor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dev.ps1  last_article_debug.txt  out.json  pyproject.toml
.github/workflows/: ci.yml  tests.yml
data/patterns/: patterns.txt
data/samples/: README.md
docs/: index.md
src/: cli.py  core.py
src/fek_extractor/: __init__.py  cli.py  constants.py  core.py  metrics.py  models.py  types.py
src/fek_extractor/debug/: __main__.py
src/fek_extractor/io/: exports.py  pdf.py
src/fek_extractor/parsing/: __init__.py  articles.py  articles_norm.py  authority.py  dates.py  headers.py  heuristics.py  html.py  html_blocks.py  normalize.py  rules.py  signatures.py  subject.py  title_fixups.py  titles.py
src/fek_extractor/parsing/rules/: __init__.py  shared.py
src/fek_extractor/utils/: __init__.py  dates.py  html_cleanup.py  logging.py  text.py
src/io/: pdf.py
src/parsing/: normalize.py  rules.py
tests/cli/: test_cli.py
tests/fixtures/: gr-act-2020-4706-4706_2020.json
tests/integration/: test_real_pdf.py
tests/unit/: test_articles.py  test_articles_fields.py  test_articles_html.py  test_articles_parsing.py  test_articles_segment.py  test_authority.py  test_exports.py  test_fields.py  test_files.py  test_headers.py  test_normalize.py  test_normalize_hyphens.py  test_rules.py  test_signatures.py  test_subject.py
